日志中间件增加输出response code、添加examples示例
